databus-manager.yaml
kind: Service
apiVersion: v1
metadata:
  name: databus-manager
  labels:
    app: databus-manager
spec:
  ports:
    - port: 8065
      name: client
  clusterIP: None
  selector:
    app: databus-manager
---
kind: StatefulSet
apiVersion: apps/v1beta1
metadata:
  name: databus-manager
spec:
  replicas: 1
  serviceName: databus-manager
  template:
    metadata:
      labels:
        app: databus-manager
    spec:
      containers:
      - name: databus-manager
        image: registry.zing.zenoss.eng/zenosszing/databusmanager
        command: [ /opt/zenoss/bin/databus-manager-start.sh ]
        ports:
        - containerPort: 8065
          name: client
        volumeMounts:
        - name: data
          mountPath: /var/zenoss/databus
  volumeClaimTemplates:
  - metadata: 
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 256Mi
