edge.yaml
kind: Service
apiVersion: v1
metadata:
  name: edge
  labels:
    app: edge
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  clusterIP: 
  selector:
    app: edge

---
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: edge
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: edge
    spec:
      containers:
      - name: edge
        image: registry.zing.zenoss.eng/zenosszing/edge:82df8b04
        ports:
        - containerPort: 8080
          name: rest
        volumeMounts:
        - name: authorization-secret
          mountPath: /run/secrets/authorization
        - name: auth0-secret
          mountPath: /run/secrets/auth0
        - name: edge-secret
          mountPath: /run/secrets/edge
        - name: ui-auth-secret
          mountPath: /run/secrets/ui-auth
      volumes:
      - name: authorization-secret
        secret:
          secretName: authorization
      - name: auth0-secret
        secret:
          secretName: auth0
      - name: edge-secret
        secret:
          secretName: edge
      - name: ui-auth-secret
        secret:
          secretName: ui-auth
