hdfs-namenode.yaml
kind: Service
apiVersion: v1
metadata:
  name: hdfs-namenode
  labels: 
    app: hdfs-namenode
spec:
  ports:
  - port: 8020
    name: fs
  clusterIP: None
  selector:
    app: hdfs-namenode
---
kind: StatefulSet
apiVersion: apps/v1beta1
metadata:
  name: hdfs-namenode
spec:
  serviceName: hdfs-namenode
  replicas: 1
  template:
    metadata:
      labels:
        app: hdfs-namenode
    spec:
      containers:
      - name: hdfs-namenode
        image: &hdfs-image registry.zing.zenoss.eng/zenosszing/zing-hdfs:f0566466
        command: [ "/usr/local/bin/bootstrap.sh", "namenode" ]
        ports: 
        - containerPort: 8020
          name: fs
        volumeMounts:
        - &data-volume 
          name: data 
          mountPath: /data/hdfs/nn
  volumeClaimTemplates:
  - metadata: 
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
