kafka-connect.yaml
kind: Service
apiVersion: v1
metadata:
  name: kafka-connect
  labels:
    app: kafka-connect
spec:
  ports:
    - port: 8083
      name: rest
  clusterIP: None
  selector:
    app: kafka-connect
---
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: kafka-connect
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kafka-connect
    spec:
      containers:
      - name: kafka-connect
        image: registry.zing.zenoss.eng/zenosszing/zing-kafkaconnect:a468ec19
        ports:
        - containerPort: 8083
          name: rest
