kafka.yaml
kind: Service
apiVersion: v1
metadata:
  name: kafka
  labels:
    app: kafka
spec:
  ports:
    - port: 9092
  clusterIP: None
  selector:
    app: kafka
---
kind: StatefulSet
apiVersion: apps/v1beta1
metadata:
  name: kafka
spec:
  serviceName: kafka
  replicas: 1
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: confluentinc/cp-kafka:3.2.1-6
        ports:
        - containerPort: 9092
