python.yaml
apiVersion: v1
kind: Service
metadata:
    name: server
    labels:
        app: server
spec:
    ports:
    - port: 8000
      targetPort: 8000
    selector:
        app: server
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
    name: server
spec:
    replicas: 1
    template:
        metadata:
            labels:
                app: server
        spec:
            containers:
            - name: python
              image: python:2.7-alpine
              command: ["python"]
              args: ["-mSimpleHTTPServer"]
              workingDir: /web/data
              ports:
                  - containerPort: 8000
              volumeMounts:
                  - mountPath: /web/data
                    name: mypd
            volumes:
               - name: mypd
                 persistentVolumeClaim:
                     claimName: web-data-claim
