authorization.yaml
kind: Service
apiVersion: v1
metadata:
  name: authorization
  labels:
    app: authorization
spec:
  ports:
    - port: 9430
      name: rest
  clusterIP: None
  selector:
    app: authorization

---
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: authorization
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: authorization
    spec:
      containers:
      - name: authorization
        image: registry.zing.zenoss.eng/zenosszing/authorization:bddff7a3
        ports:
        - containerPort: 9430
          name: rest
        volumeMounts:
        - name: authorization-secret
          mountPath: /run/secrets/authorization
        - name: edge-secret
          mountPath: /run/secrets/edge
      volumes:
      - name: authorization-secret
        secret:
          secretName: authorization
      - name: edge-secret
        secret:
          secretName: edge

---
kind: Ingress
apiVersion: extensions/v1beta1
metadata: 
  name: authorization
  annotations: 
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
  labels:
    tier: service
spec:
  rules:
  - http: 
      paths:
      - path: /authorization
        backend: 
          serviceName: authorization
          servicePort: 9430
