metric-catalog.yaml
kind: Service
apiVersion: v1
metadata:
  name: metric-catalog
  labels:
    app: metric-catalog
spec:
  ports:
    - port: 8060
  clusterIP: None
  selector:
    app: metric-catalog

---
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: metric-catalog
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: metric-catalog
    spec:
      containers:
      - name: metric-catalog
        image: registry.zing.zenoss.eng/zenosszing/metric-catalog:latest
        command: [ /usr/local/bin/init.sh, bin/metric-catalog-api.sh ]
        ports:
        - containerPort: 8060

---
kind: Ingress
apiVersion: extensions/v1beta1
metadata: 
  name: metric-catalog
  annotations: 
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip 
spec:
  rules:
  - http: 
      paths:
      - path: /metric-catalog
        backend: 
          serviceName: metric-catalog
          servicePort: 8060
